--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
+    <link
+      href="https://fonts.googleapis.com/css?family=Kumbh+Sans:regular,700"
+      rel="stylesheet"
+    />
     <link
       rel="icon"
       type="image/png"
@@ -15,60 +18,27 @@
     <title>Frontend Mentor | Profile card component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    Victor Crest 26 London 80K Followers 803K Likes 1.4K Photos
+  <body class="bg-darkCyan">
+    <main>
+      <div class="relative items-center justify-center">
+        <div class="absolute top-0 left-0 right-0 bg-patternBottom bg-no-repeat bg-contain h-1/2">
+          Content
+      </div>
+        <div class="absolute h-1/2">
+          Victor Crest 26 London 80K Followers 803K Likes 1.4K Photos
+        </div>
+        
+    </main>
+    
+    <footer>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Bethanie Innes</a>.
     </div>
-  </body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-
-    <title>Frontend Mentor | Profile card component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
-  </head>
-  <body>
-    Victor Crest 26 London 80K Followers 803K Likes 1.4K Photos
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+  </footer>
   </body>
 </html>
